Remove TossOrderWheel and overlay tint shader implementation